[tool.poetry]
name = "userreport"
version = "0.1.0"
description = ""
authors = ["ericdab0ss <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.3"
nextcord-ext-menus = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
